--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,23 @@ services:
     networks:
       - shopping-app-network
 
+  # Mongo Express - MongoDB Web UI
+  mongo-express:
+    image: mongo-express:latest
+    container_name: shopping-app-mongo-express
+    restart: unless-stopped
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://admin:password@mongodb:27017/
+      ME_CONFIG_BASICAUTH: false
+    depends_on:
+      - mongodb
+    networks:
+      - shopping-app-network
+
   # Redis Cache
   redis:
     image: redis:7-alpine
@@ -42,7 +59,7 @@ services:
       - NODE_ENV=development
       - PORT=5000
       - MONGO_URI=mongodb://admin:password@mongodb:27017/shopping-app?authSource=admin
-      - UPSTASH_REDIS_URL=redis://redis:6379
+      - REDIS_URL=redis://redis:6379
       - ACCESS_TOKEN_SECRET=${ACCESS_TOKEN_SECRET}
       - REFRESH_TOKEN_SECRET=${REFRESH_TOKEN_SECRET}
       - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
