--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
+    "prom-client": "^15.1.3",
     "stripe": "^20.1.0"
   },
   "devDependencies": {
