--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "prom-client": "^15.1.3",
+    "rate-limit-redis": "^4.3.1",
     "stripe": "^20.1.0"
   },
   "devDependencies": {
